@@ -655,11 +655,11 @@ public class IncrementalCooperativeAssignorTest {
         int num = 2;
         List<WorkerLoad> existingAssignment = IntStream.range(0, 3)
                 .mapToObj(i -> workerLoad("worker" + i, i * num, num, i * num, num))
-                .toList();
+                .collect(Collectors.toList());
 
         List<WorkerLoad> expectedAssignment = existingAssignment.stream()
                 .map(wl -> new WorkerLoad.Builder(wl.worker()).withCopies(wl.connectors(), wl.tasks()).build())
-                .toList();
+                .collect(Collectors.toList());
         expectedAssignment.get(0).connectors().addAll(List.of("connector6", "connector9"));
         expectedAssignment.get(1).connectors().addAll(List.of("connector7", "connector10"));
         expectedAssignment.get(2).connectors().add("connector8");
@@ -674,11 +674,11 @@ public class IncrementalCooperativeAssignorTest {
         int num = 2;
         List<WorkerLoad> existingAssignment = IntStream.range(0, 3)
                 .mapToObj(i -> workerLoad("worker" + i, i * num, num, i * num, num))
-                .toList();
+                .collect(Collectors.toList());
 
         List<WorkerLoad> expectedAssignment = existingAssignment.stream()
                 .map(wl -> new WorkerLoad.Builder(wl.worker()).withCopies(wl.connectors(), wl.tasks()).build())
-                .toList();
+                .collect(Collectors.toList());
 
         expectedAssignment.get(0).connectors().addAll(List.of("connector6", "connector9"));
         expectedAssignment.get(1).connectors().addAll(List.of("connector7", "connector10"));
@@ -1361,7 +1361,7 @@ public class IncrementalCooperativeAssignorTest {
     private static List<String> newConnectors(int start, int end) {
         return IntStream.range(start, end)
                 .mapToObj(i -> "connector" + i)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static List<ConnectorTaskId> newTasks(int start, int end) {
@@ -1371,7 +1371,7 @@ public class IncrementalCooperativeAssignorTest {
     private static List<ConnectorTaskId> newTasks(String connectorName, int start, int end) {
         return IntStream.range(start, end)
                 .mapToObj(i -> new ConnectorTaskId(connectorName, i))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void addNewConnector(String connector, int taskCount) {
@@ -1480,7 +1480,7 @@ public class IncrementalCooperativeAssignorTest {
         List<Integer> expectedAllocations = IntStream.of(rawExpectedAllocations)
                 .boxed()
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
         List<Integer> actualAllocations = allocations(allocation);
         assertEquals(expectedAllocations,
             actualAllocations,
@@ -1492,7 +1492,7 @@ public class IncrementalCooperativeAssignorTest {
                 .map(allocation)
                 .map(Collection::size)
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void assertNoRevocations() {
